--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,6 +1,17 @@
 {
     "rewrites": [
       { "source": "/(.*)", "destination": "/" }
+    ],
+    "headers": [
+      {
+        "source": "/(.*)",
+        "headers": [
+          {
+            "key": "Content-Security-Policy",
+            "value": "default-src 'self'; script-src 'self'; object-src 'none'; style-src 'self' 'unsafe-inline'; font-src 'self';"
+          }
+        ]
+      }
     ]
   }
   
