Update vercel.json for working nested routes

--- a/vercel.json
+++ b/vercel.json
@@ -11,13 +11,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "dest": "client/build/index.html"
     }
   ]
 }
