Fix Vercel rewrites for mobile route support

--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,14 @@
 {
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/client/index.html"
+    }
+  ],
   "builds": [
     {
       "src": "client/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "client/build"
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "client/build/index.html"
+      "use": "@vercel/static-build"
     }
   ]
 }
