--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,10 @@
   "builds": [
     {
       "src": "client/package.json",
-      "use": "@vercel/static-build"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/client/build/index.html"
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "client/build"
+      }
     }
   ]
 }
