Fix: vercel.json route handling for nested paths

--- a/vercel.json
+++ b/vercel.json
@@ -7,5 +7,11 @@
         "distDir": "client/build"
       }
     }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "client/build/index.html"
+    }
   ]
 }
