refactor: update hydration handling and component structure

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .vercel
+
+# Repair Protocol Safeguards
+.next/cache/**
+.turbo/**
+node_modules/**
