--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
       "@/components/*": ["./components/*"],
       "@/types/*": ["./types/*"],
       "@/lib/*": ["./lib/*"]
-    }
+    },
+    "typeRoots": ["./types", "./node_modules/@types"]
   },
   "include": [
     "next-env.d.ts",
