--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "bnb-calc-clone",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate",
     "vercel-build": "prisma generate && next build",
     "vercel:env": "node vercel-env.js"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.9.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-checkbox": "^1.2.2",
@@ -25,9 +23,9 @@
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "20.11.24",
+    "@types/node": "^20.11.0",
     "@types/papaparse": "^5.3.15",
-    "@types/react": "18.2.61",
+    "@types/react": "^18.2.0",
     "@types/react-dom": "18.2.19",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
@@ -40,10 +38,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.1.0",
+    "dompurify": "^3.2.4",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.28",
     "html2canvas": "^1.4.1",
-    "json2csv": "^5.0.7",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
     "jszip": "^3.10.1",
@@ -51,7 +49,7 @@
     "mongodb": "^6.15.0",
     "mongoose": "^8.2.0",
     "nanoid": "^5.0.6",
-    "next": "14.1.0",
+    "next": "14.2.3",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
@@ -76,8 +74,10 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/json2csv": "^5.0.7",
     "@types/next-auth": "^3.13.0",
-    "@types/nodemailer": "^6.4.17",
     "dotenv": "^16.5.0",
     "prisma": "^6.6.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
